tests/fcode/errors/err_f77_modern_syntax.f77
      module bad_module
      end module bad_module
